--- a/marvel.html
+++ b/marvel.html
@@ -11,12 +11,12 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Marvel Character Search</a>
+          <a class="navbar-brand">Marvel Character Search</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <form class="navbar-form navbar-left">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="search" id="marvelSearch">
+              <input type="text" name = "marvelSearch" class="form-control" placeholder="search" id="marvelSearch">
             </div>
             <button type="submit" class="btn btn-default" id="submit-button">Submit</button>
           </form>
